Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.5.0-beta
-
None
-
Windows 7 (64), Mac OS, Linux
-
850319e56c06af175d3c3179d6cda287cc82cacf
Description
Steps to reproduce:
1) Open Creator
2) Go to options and set tab size to 4, for example
3) Create a new file.txt from the wizard and start typing
4) Go to options again, set tab size to 8, and apply
Result: Settings are not reflected on the current editor.
Notice that in this case the file is pure text (no code styles, C++ or QML, should have taken into consideration) and it's also not associated to any project (so global settings should take precedence).
Attachments
For Gerrit Dashboard: QTCREATORBUG-6429 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
8253,1 | Apply changes of global tab settings to editors | 2.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |