Apply changes of global tab settings to editors

Return global tab settings in case there are no
code style settings for passed languageId

Task-number: QTCREATORBUG-6429
Change-Id: Ieccd265fa03bfba0832d285a6443633dd27ba03a
Reviewed-by: Leandro Melo <leandro.melo@nokia.com>